# Practice_ROS2

./: Dockerfile  README.md  docker-compose.yml  init.sh  package.xml  setup.cfg  setup.py
cpp_pkg/: CMakeLists.txt  package.xml
cpp_pkg/launch/: all_launch.launch.py  test.launch.py
cpp_pkg/msg/: Custommsg.msg
cpp_pkg/src/: client_cpp.cpp  cpp_pub.cpp  cpp_sub.cpp
custom_msg_srv/: CMakeLists.txt  package.xml
python_pkg/: package.xml  setup.py
python_pkg/launch/: all_launch.launch.py  test.launch.py
python_pkg/python_pkg/: python_node_pub.py  python_node_sub.py  python_node_sus.py
